app/src/main/java/com/example/weatherapp/error/ErrorFragment.kt
package com.example.weatherapp.error

class ErrorFragment